--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -479,6 +479,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     min-width: 0;
+    text-align: left;
   }
 
   &__sortable {
